# lgeo

./: Cargo.toml  README.md
src/: lib.rs  shape.rs  util.rs
src/gjk/: algorithm.rs  mod.rs  simplex.rs  support.rs
src/results/: contact.rs
src/shapes/: aabb.rs  circle.rs  mod.rs  polygon.rs
tests/: gjk.rs
